# test_ga_ms_sdk

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
